<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@drawable/chatlist_bg"
    android:orientation="vertical">

    <include layout="@layout/nav_header"/>

    <TextView
        android:layout_margin="@dimen/dimens_5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calls_str"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_margin="@dimen/dimens_5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_str"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_margin="@dimen/dimens_5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_str"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_14sp"
        android:textStyle="bold" />


</LinearLayout>